// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TelephoneField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <div
        class="sc-lmoMRL kywwk"
      >
        <div
          class="sc-bBXqnf fTSkBg"
        >
          <span
            class="sc-iwyYcG chHiVN"
          >
            +48
          </span>
        </div>
        <input
          class="sc-hBEYos LINIC"
          id="testId"
          name="telephone"
          placeholder="Numer telefonu"
          prefix="+48"
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value="3232a"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podany numer telefonu jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<TelephoneField /> matches snapshot 1`] = `
<input
  class="sc-hBEYos fZZGYn"
  id="testId"
  name="telephone"
  placeholder="Numer telefonu"
  prefix="+48"
  style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
  type="tel"
  value=""
/>
`;

exports[`<TelephoneField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="telephone"
      >
        FirstName*
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <div
          class="sc-bBXqnf fTSkBg"
        >
          <span
            class="sc-iwyYcG chHiVN"
          >
            +48
          </span>
        </div>
        <input
          class="sc-hBEYos LINIC"
          id="testId"
          label="FirstName"
          name="telephone"
          placeholder="Numer telefonu*"
          prefix="+48"
          required=""
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value=""
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<TelephoneField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="telephone"
      >
        Telephone
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <div
          class="sc-bBXqnf htyJEB"
        >
          <span
            class="sc-iwyYcG chHiVN"
          >
            +48
          </span>
        </div>
        <input
          class="sc-hBEYos fZZGYn"
          id="testId"
          label="Telephone"
          name="telephone"
          placeholder="Numer telefonu"
          prefix="+48"
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
